[tool.poetry]
name = "meta-rl"
version = "0.1.0"
description = ""
authors = ["seancraven <seanpietercraven@gmail.com>"]
readme = "README.md"
packages = [{ include = "meta_rl" }]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
